# geno

./: .gitignore  Cargo.toml  Justfile  README.md  coverage.json  version.json5
examples/: example.geno  include.geno
examples/test/: bad_include.geno  eof_1.geno  number_range.geno  struct_cycle.geno
src/: ast.rs  ast_builder.rs  case.rs  error.rs  file_resolver.rs  geno.pest  lib.rs  location.rs  parser.rs  parser_error.rs  tokenizer.rs
tests/: geno.rs
