[package]
name = "geno"
version = "0.6.0"
edition = "2024"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]

readme = "README.md"
description = "A cross-language schema compiler that generates type definitions and serialization code from a simple, declarative schema language."
repository = "https://github.com/jlyonsmith/geno.git"

keywords = ["schema", "network", "language"]
categories = ["command-line-utilities", "development-tools"]

license = "Unlicense"

[dependencies]
clap = { version = "4", features = ["derive"] }
duct = "1.1.1"
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
which = "8.0.0"
rmp-serde = "1.3.1"
num-traits = "0.2.19"
itertools = "0.14.0"
fallible-iterator = "0.3.0"
path-clean = "1.0.1"
phf = { version = "0.13.1", features = ["macros"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.25.0"

[[bin]]
name = "geno"
path = "src/bin/geno.rs"

[[bin]]
name = "geno-rust-serde"
path = "src/bin/geno_rust_serde.rs"

[[bin]]
name = "geno-dart-mp"
path = "src/bin/geno_dart_mp.rs"

[[bin]]
name = "geno-dart-json"
path = "src/bin/geno_dart_json.rs"
